--- a/chartjs/src/main/webapp/barex1.html
+++ b/chartjs/src/main/webapp/barex1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  /chartjs1/src/main/webapp/barex1.html -->
+<!--  /chartjs/src/main/webapp/barex1.html -->
 <html>
 <head>
 <meta charset="UTF-8">
@@ -17,7 +17,6 @@
 </style>  
 </head>
 <body>
-
 <div id="container" style="width:95%;">
   <canvas id="canvas"></canvas>  <!-- chartjs에 의해 그래프 출력 영역  -->
 </div>
@@ -25,7 +24,6 @@
 <script type="text/javascript">
    // 배열로 설정 
    const MONTHS = ["1월","2월","3월","4월","5월","6월","7월","8월","9월","10월","11월","12월"]
-   
    //막대그래프에 표시한 데이터 객체 
    const barChartData = {
 		   labels : MONTHS,  //x축데이터 
@@ -48,11 +46,10 @@
    }
    //화면 준비 완료.
    window.onload =function(){
-	   //document.getElementById("canvas") : id태그가 캔버스인 태그를 가져와
-	   // .getContext("2d") : "2d"의 형태로 만드럭야.
+	   //canvas 태그 선택.
 	   let ctx = document.getElementById("canvas").getContext("2d") //그래프 출력 영역 
 	   //막대 그래프 출력 
-	   new Chart(ctx,{ //ctx영역에 차트를그리기.
+	   new Chart(ctx,{
   		 type : 'bar', //막대그래프로 표시 
   		 data : barChartData, //막대그래프로 출력될 데이터 객체 
   		 options : {
